<resources>
    <string name="app_name">Автопарк</string>
    <string name="tipzad">Тип задания:</string>
    <string name="potpr">Пункт отпр:</string>
    <string name="pprib">Пункт приб:</string>
    <string name="komment">Комментарий:</string>
    <string name="status_bid">Статус:</string>
    <string name="otpr">Отправить</string>
    <string name="new_task">Новое задания</string>
    <string name="add_task">Добавить задание</string>
    <string name="edit_text">Редактировать задание</string>
    <string name="edit">Изменить</string>
    <string name="delete">Удалить</string>
    <string name="activ_task">Принятое задание</string>
    <string name="driver">Водитель:</string>
    <string name="car">Машина:</string>
    <string name="login">Войти</string>
    <string name="auto">Авторизация</string>
    <string name="acceptTask">Принять</string>
    <string name="fullInfoDriver">Полная информация</string>
    <string name="driverId">DRIVER_ID</string>
    <string name="carId">CAR_ID</string>
    <string name="completeTask">Завершить</string>
    <string name="cancleTask">Отменить</string>
    <string name="bidId"></string>

</resources>
