<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="carpark.carpark.info_task_d"
    android:background="#5D72E1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tipzad"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/type_bid_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#FFFFFF"
                    android:text="Тип задания" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/potpr"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/address_start_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#FFFFFF"
                    android:text="Пункт отпр." />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pprib"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/address_finish_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#FFFFFF"
                    android:text="Пункт приб." />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/komment"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/comment_driver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="15dp"
                    android:textColor="#FFFFFF"
                    android:text="Комментарий" />
            </RelativeLayout>

            <Button
                android:id="@+id/accept_task"
                android:onClick="acceptTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/acceptTask"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border"
                android:textColor="#FFFFFF"
                android:padding="10dp"/>

            <Button
                android:id="@+id/complete_task"
                android:onClick="completeTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completeTask"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/cancle_task"
                android:onClick="cancleTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancleTask"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border"
                android:textColor="#FFFFFF"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:visibility="gone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
