<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5D72E1"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:onClick="edit_task">

                <ImageView
                    android:id="@+id/type_bid_icon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="10dp"
                    app:srcCompat="@mipmap/ic_cargo"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/tipzad"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/potpr"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/pprib"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:text="@string/status_bid"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="90dp" />

                <TextView
                    android:id="@+id/type_bid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="170dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/tipzad"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/address_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/potpr"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/address_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="160dp"
                    android:layout_marginTop="65dp"
                    android:text="@string/pprib"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/status_bid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="130dp"
                    android:text="@string/status_bid"
                    android:textColor="#FFFFFF"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="90dp" />

                <TextView
                    android:text="sadsadas"
                    android:id="@+id/id_task_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_below="@+id/type_bid"
                    android:layout_alignStart="@+id/type_bid"
                    android:layout_marginStart="16dp" />

            </RelativeLayout>
        </LinearLayout>

</LinearLayout>
