<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="carpark.carpark.edit_task"
    android:background="#5D72E1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tipzad"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    android:id="@+id/textView2" />

                <!--          <Spinner
                              android:id="@+id/spinner_edit"
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:layout_marginEnd="15dp"
                              android:layout_centerVertical="true"
                              android:layout_alignParentEnd="true" />-->


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/potpr"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/address_start_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="40dp"
                    android:hint="Введите точку отпр."
                    android:inputType="textCapWords"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#64ffffff"
                    android:textSize="15dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pprib"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/address_finish_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="40dp"
                    android:textSize="15dp"
                    android:hint="Введите точку приб."
                    android:textColor="#FFFFFF"
                    android:textColorHint="#64ffffff"
                    android:inputType="textCapWords" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/komment"
                    android:textColor="#FFFFFF"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/comment_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="40dp"
                    android:textSize="15dp"
                    android:hint="Введите комментарий"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#64ffffff"
                    android:inputType="textCapWords" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/edit_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:text="@string/edit"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/delete_task"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_toRightOf="@id/edit_task"
                    android:background="@drawable/border"
                    android:onClick="delete"
                    android:padding="10dp"
                    android:text="@string/delete"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/id_task_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/edit_task"
                    android:layout_toEndOf="@+id/edit_task"
                    android:text="sdfdsf"
                    android:visibility="visible" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>