<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#5D72E1"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            >

            <ImageView
                android:id="@+id/type_bid_icon_d"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                app:srcCompat="@mipmap/ic_cargo"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="15dp"
                android:text="@string/tipzad"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="40dp"
                android:text="@string/potpr"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="65dp"
                android:text="@string/pprib"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/type_bid_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="170dp"
                android:layout_marginTop="15dp"
                android:text="@string/tipzad"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/address_start_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="40dp"
                android:text="@string/potpr"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/address_finish_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="160dp"
                android:layout_marginTop="65dp"
                android:text="@string/pprib"
                android:textColor="#FFFFFF" />

            <TextView
                android:text="sadsadas"
                android:id="@+id/id_task_item_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
